# xl_extraction_agent

./: .gitignore  ITG Co Consolidated_Financial Data_April 2025.xlsx - Copy.xlsx  KPI_Extractor_Agent_Flow.md  Nykaa MIS FY24 .csv  Nykaa MIS FY24 .xlsx  README.md  pyproject.toml
src/: agent.py  kpi_extractor_agent.py  main.py  tools.py
src/common/: types.py
src/config/: llm_config.py
src/o3/: kpi_agent.py  kpi_agent_verification.md
src/utlis/: excel_to_csv_utils.py  file_processing_utils.py  validation_utils.py
test_excel_files/: Nykaa MIS FY24 .xlsx
test_excel_files/converted_csvs/: Nykaa MIS FY24 _Nykaa MIS FY24 .csv
